	Fixed bug where an exception would be thrown by the element if the page was served in xhtml mode.
	Fixed bug where mceInsertContent would throw an exception when page was served in xhtml mode.
	Fixed bug where you couldn't select a forground/background color when page was served in xhtml mode.
	Fixed bug where the editor would scroll to the toolbar when clicked due to a call to focus in ListBox.
	Removed obsolete calls in various plugins to the mceBeginUndoLevel command.
Version 3.4b3 (2011-02-10)
	Added WAI-ARIA support for the main UI and dialogs this feature was contributed by Ephox.
	Added iframe support to media plugin in order to handle the new YouTube HTML5 video formats.
	Fixed bug where anchors would wrap the text contents after it due to a bug in the DomParser logic.
	Fixed bug where the selected state wouldn't be removed on ListBox controls when a menu item was selected.
	Fixed bug where IE could throw an unspecified error exception when the getBookmark logic was executed.
	Fixed bug where IE would throw an invalid argument error when focus was applied to an empty editor instance.
	Fixed bug where applying inline format wouldn't work if the start cell in the selection was empty.
	Fixed bug where auto detection logic for YouTube and Google Video wouldn't work in the new media plugin.
	Fixed bug where td elements would get a colspan/rowspan of 1 when created by the table plugin.
	Fixed bug where removal/padding of empty elements wasn't handled correctly.
	Fixed bug where internal elements would show up in element path.
	Fixed bug where internal elements would get serialized as valid output.
	Fixed bug where color wasn't correctly applied to anchor elements.
	Fixed bug where float option in the style plugin dialog wouldn't be handled correctly on WebKit.
	Fixed bug where the tinymce.dom.TreeWalker prev function wouldn't walk the DOM correctly.
	Fixed bug where mceInsertContent command could produce empty block elements after the inserted content.