@@ -17,50 +17,6 @@
 	 *
 	 * @class tinymce.ui.DropMenu
 	 * @extends tinymce.ui.Menu
-	 * @example
-	 * // Adds a menu to the currently active editor instance
-	 * var dm = tinyMCE.activeEditor.controlManager.createDropMenu('somemenu');
-	 * 
-	 * // Add some menu items
-	 * dm.add({title : 'Menu 1', onclick : function() {
-	 *     alert('Item 1 was clicked.');
-	 * }});
-	 * 
-	 * dm.add({title : 'Menu 2', onclick : function() {
-	 *     alert('Item 2 was clicked.');
-	 * }});
-	 * 
-	 * // Adds a submenu
-	 * var sub1 = dm.addMenu({title : 'Menu 3'});
-	 * sub1.add({title : 'Menu 1.1', onclick : function() {
-	 *     alert('Item 1.1 was clicked.');
-	 * }});
-	 * 
-	 * // Adds a horizontal separator
-	 * sub1.addSeparator();
-	 * 
-	 * sub1.add({title : 'Menu 1.2', onclick : function() {
-	 *     alert('Item 1.2 was clicked.');
-	 * }});
-	 * 
-	 * // Adds a submenu to the submenu
-	 * var sub2 = sub1.addMenu({title : 'Menu 1.3'});
-	 * 
-	 * // Adds items to the sub sub menu
-	 * sub2.add({title : 'Menu 1.3.1', onclick : function() {
-	 *     alert('Item 1.3.1 was clicked.');
-	 * }});
-	 * 
-	 * sub2.add({title : 'Menu 1.3.2', onclick : function() {
-	 *     alert('Item 1.3.2 was clicked.');
-	 * }});
-	 * 
-	 * dm.add({title : 'Menu 4', onclick : function() {
-	 *     alert('Item 3 was clicked.');
-	 * }});
-	 * 
-	 * // Display the menu at position 100, 100
-	 * dm.showMenu(100, 100);
 	 */
 	tinymce.create('tinymce.ui.DropMenu:tinymce.ui.Menu', {
 		/**
@@ -114,7 +70,6 @@
 		
 		focus : function() {
 			var t = this;
-
 			if (t.keyboardNav) {
 				t.keyboardNav.focus();
 			}
@@ -260,17 +215,8 @@
 
 			t.onShowMenu.dispatch(t);
 
-			if (s.keyboard_focus) {
-				t.keyboardNav = new tinymce.ui.KeyboardNavigation({
-					root: 'menu_' + t.id,
-					items: DOM.select('a[role=option]', 'menu_' + t.id),
-					onCancel: function() {
-						t.hideMenu();
-					},
-					enableUpDown: true
-				});
-
-				DOM.select('a[role=option]', 'menu_' + t.id)[0].focus(); // Select first link
+			if (s.keyboard_focus) { 
+				t._setupKeyboardNav(); 
 			}
 		},
 
@@ -376,7 +322,7 @@
 		renderNode : function() {
 			var t = this, s = t.settings, n, tb, co, w;
 
-			w = DOM.create('div', {role: 'listbox', id : 'menu_' + t.id, 'class' : s['class'], 'style' : 'position:absolute;left:0;top:0;z-index:200000'});
+			w = DOM.create('div', {role: 'listbox', id : 'menu_' + t.id, 'class' : s['class'], 'style' : 'position:absolute;left:0;top:0;z-index:200000;outline:0'});
 			if (t.settings.parent) {
 				DOM.setAttrib(w, 'aria-parent', 'menu_' + t.settings.parent.id);
 			}
@@ -400,6 +346,21 @@
 		},
 
 		// Internal functions
+		_setupKeyboardNav : function(){
+			var contextMenu, menuItems, t=this; 
+			contextMenu = DOM.select('#menu_' + t.id)[0];
+			menuItems = DOM.select('a[role=option]', 'menu_' + t.id);
+			menuItems.splice(0,0,contextMenu);
+			t.keyboardNav = new tinymce.ui.KeyboardNavigation({
+				root: 'menu_' + t.id,
+				items: menuItems,
+				onCancel: function() {
+					t.hideMenu();
+				},
+				enableUpDown: true
+			});
+			contextMenu.focus();
+		},
 
 		_keyHandler : function(evt) {
 			var t = this, e;
